chore: fixed code styles issues with prettier

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -22,15 +22,15 @@ Distr provides distribution tooling for [self-managed](/docs/use-cases/fully-sel
 
 ## Distr in Short
 
-| Feature | Description |
-| ------- | ----------- |
-| 🔄 **Multiple distribution models** | Distr supports fully self-managed, assisted self-managed, BYOC, air-gapped, and edge deployments to meet any customer requirement. |
-| 🛠️ **Works with existing tools** | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as [GitHub Actions](http://localhost:4321/docs/integrations/gh-action/)  fitting easily into established workflows. |
-| 🔒 **Built for enterprise security** | Supports air-gapped environments and [token based](/docs/integrations/personal-access-token/) private registry access |
-| 📦 **Multiple package formats** | Distributes Docker Compose files, Helm charts and any OCI-compliant artifact. |
-| 🔍 **Complete visibility** | Centralized monitoring of deployment status, versions, and health across all customer environments. |
-| 📋 **Deployment flexibility** | Available as both a managed SaaS and a [self-hosted](/docs/self-hosting/getting-started/) solution |
-| 📱 **Dual portal system** | Vendor Portal for complete control and Customer Portal for simplified, [white-labeled](docs/product/branding/) end-customer access. |
+| Feature                              | Description                                                                                                                                                                                |
+| ------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 🔄 **Multiple distribution models**  | Distr supports fully self-managed, assisted self-managed, BYOC, air-gapped, and edge deployments to meet any customer requirement.                                                         |
+| 🛠️ **Works with existing tools**     | Distr integrates with Docker, Helm, and all OCI-compliant tools as well as [GitHub Actions](http://localhost:4321/docs/integrations/gh-action/) fitting easily into established workflows. |
+| 🔒 **Built for enterprise security** | Supports air-gapped environments and [token based](/docs/integrations/personal-access-token/) private registry access                                                                      |
+| 📦 **Multiple package formats**      | Distributes Docker Compose files, Helm charts and any OCI-compliant artifact.                                                                                                              |
+| 🔍 **Complete visibility**           | Centralized monitoring of deployment status, versions, and health across all customer environments.                                                                                        |
+| 📋 **Deployment flexibility**        | Available as both a managed SaaS and a [self-hosted](/docs/self-hosting/getting-started/) solution                                                                                         |
+| 📱 **Dual portal system**            | Vendor Portal for complete control and Customer Portal for simplified, [white-labeled](docs/product/branding/) end-customer access.                                                        |
 
 ## Who is Distr for?
 
@@ -49,7 +49,7 @@ Distr enables you to:
 - **Manage deployments** with visibility across all customer environments and customer controlled deployments
 - **Enforce licensing** down to the application version level, and with tag-based access controls for individual artifacts
 - **Track consumption** and health status and the download count of artifacts and applications across your customer base
-- **White-label** the customer experience to align with your brand and onboard end-customers quickly 
+- **White-label** the customer experience to align with your brand and onboard end-customers quickly
 
 ## Where do I start?
 
@@ -57,6 +57,5 @@ Get started with Distr in minutes. Follow the [quickstart guide](/docs/getting-s
 
 <Aside type="note">
   Ready to begin? Create your Distr account
-  [here](https://glasskube.cloud/signup.html) and follow the 
-  onboarding steps.
+  [here](https://glasskube.cloud/signup.html) and follow the onboarding steps.
 </Aside>
