--- a/src/content/docs/docs/getting-started/deployment-methods.mdx
+++ b/src/content/docs/docs/getting-started/deployment-methods.mdx
@@ -16,6 +16,7 @@ As an Open Source platform, Distr offers two deployment methods to suit differen
 The fastest way to get started. Our fully hosted offering includes:
 
 All in the free tier:
+
 - Up to 3 users
 - Basic license management
 - Unlimited deployments
@@ -30,7 +31,8 @@ To check view the other plans go to the [pricing page here](https://glasskube.de
 
 <Aside type="tip">
   Get started immediately by creating your free Distr account
-  [here](https://signup.distr.sh) and following the [onboarding tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials).
+  [here](https://signup.distr.sh) and following the [onboarding
+  tutorials](/docs/getting-started/quickstart/#getting-started-with-platform-tutorials).
 </Aside>
 
 ### Self-Hosted
