--- a/src/content/docs/docs/getting-started/quickstart.mdx
+++ b/src/content/docs/docs/getting-started/quickstart.mdx
@@ -39,7 +39,6 @@ To access these tutorials:
 3. Go to the Tutorials section
 4. We recommend completing the tutorials in order for the best learning experience
 
-
 ## After Completing Tutorials
 
 Upon completion, you'll be ready to:
@@ -53,6 +52,7 @@ Upon completion, you'll be ready to:
 Visit the [Use cases](/docs/use-cases/fully-self-managed/) section to identify the scenario that best fits your end customers and begin implementing the most appropriate deployment model for them.
 
 <Aside type="tip">
-  Need more help? Join our [Community Discord Server](https://discord.gg/6qqBSAWZfW) for
-  assistance from our team and other Distr users.
+  Need more help? Join our [Community Discord
+  Server](https://discord.gg/6qqBSAWZfW) for assistance from our team and other
+  Distr users.
 </Aside>
