--- a/src/content/docs/docs/guides/how-to-registry.mdx
+++ b/src/content/docs/docs/guides/how-to-registry.mdx
@@ -4,12 +4,11 @@ description: Guide to set up and use the Registry
 sidebar:
   order: 3
 ---
+
 import {Aside} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
-
 A quick guide to configuring and using the Distr Artifact Registry for secure, tag-based software distribution.
-
 
 ## 1. Set your Registry Slug
 
@@ -22,7 +21,8 @@ Before you can push or pull artifacts, you must configure a registry slug at the
 />
 
 <Aside type="note">
-  The slug must start with a lowercase letter or digit and can only contain lowercase letters, digits, `.`, `_`, `__`, or `-`.
+  The slug must start with a lowercase letter or digit and can only contain
+  lowercase letters, digits, `.`, `_`, `__`, or `-`.
 </Aside>
 
 ---
