--- a/src/content/docs/docs/product/distr-hub.mdx
+++ b/src/content/docs/docs/product/distr-hub.mdx
@@ -4,6 +4,7 @@ description: Information about the vendor portal
 sidebar:
   order: 3
 ---
+
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
 Distr Hub includes two user interfaces: the Vendor Portal, designed for software and AI vendors, and the Customer Portal, a self-service interface for their end customers.
@@ -28,9 +29,9 @@ The Vendor Portal serves as the control plane for vendors, providing access to a
 
 2. **View the global dashboard**: Monitor the health status of both internal deployments and customer-managed applications and artifacts.
 
-3. **Onboard and configure applications**: Use the *Agent* section to register applications and the *Deployments* section to manage updates for internally deployed application and monitor the health of end-customer deployed workloads.
+3. **Onboard and configure applications**: Use the _Agent_ section to register applications and the _Deployments_ section to manage updates for internally deployed application and monitor the health of end-customer deployed workloads.
 
-4. **Manage the registry**: Browse and manage stored artifacts in the *Registry* section.
+4. **Manage the registry**: Browse and manage stored artifacts in the _Registry_ section.
 
 5. **Configure licenses**: Define application and artifact licenses to control access to specific versions or tags.
 
@@ -46,10 +47,8 @@ The Vendor Portal serves as the control plane for vendors, providing access to a
 
 1. **Explore vendor-provided documentation**: The homepage serves as the end-customer’s landing pad, offering release notes, agent and registry instructions, helpful links, and support information. It’s the go-to place for understanding how to install and maintain the vendor’s software.
 
-2. **Deploy and manage agents**: In the *Deployments* section, customers can deploy agents to their internal infrastructure. These agents can then be used to manage one or multiple deployments.
+2. **Deploy and manage agents**: In the _Deployments_ section, customers can deploy agents to their internal infrastructure. These agents can then be used to manage one or multiple deployments.
 
-3. **Access and consume artifacts**: The *Artifacts* section displays the software artifacts that have been enabled for the customer, along with instructions on how to pull and use them.
+3. **Access and consume artifacts**: The _Artifacts_ section displays the software artifacts that have been enabled for the customer, along with instructions on how to pull and use them.
 
-4. **Generate access tokens**: In the top-right corner, the *Customer Settings* area allows users to generate Personal Access Tokens (PATs), which are required for authenticating with the registry.
-
-
+4. **Generate access tokens**: In the top-right corner, the _Customer Settings_ area allows users to generate Personal Access Tokens (PATs), which are required for authenticating with the registry.
