--- a/src/content/docs/docs/use-cases/assisted-self-managed.mdx
+++ b/src/content/docs/docs/use-cases/assisted-self-managed.mdx
@@ -25,12 +25,13 @@ A key feature of the Distr agent is its ability to deploy either Docker Compose 
 ### Implementation steps
 
 <Steps>
-1. **Set Up Your [Registry](/docs/guides/how-to-registry/)**
-2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)**
-3. **White-label the [Customer portal](/docs/product/branding/)**
-5. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)**
-6. **Customer creates a [Personal Access token](/docs/integrations/personal-access-token/)**
-7. **Customer can [deploy your application via the Dist agents](/docs/guides/end-customer-registry-view/#deployment-agent-quickstart-from-the-customer-portal)**
+  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 2. **Onboard Your
+  [Application](/docs/guides/onboarding-a-helm-app/)** 3. **White-label the
+  [Customer portal](/docs/product/branding/)** 5. **Onboard your first
+  [customer](/docs/guides/onboarding-a-new-customer/)** 6. **Customer creates a
+  [Personal Access token](/docs/integrations/personal-access-token/)** 7.
+  **Customer can [deploy your application via the Dist
+  agents](/docs/guides/end-customer-registry-view/#deployment-agent-quickstart-from-the-customer-portal)**
 </Steps>
 
 <Aside type="tip">
