--- a/src/content/docs/docs/use-cases/byoc.mdx
+++ b/src/content/docs/docs/use-cases/byoc.mdx
@@ -4,6 +4,7 @@ description: Fully vendor-managed deployments within customer-owned cloud subscr
 sidebar:
   order: 3
 ---
+
 import {Aside, Steps} from '@astrojs/starlight/components';
 import ThemeImage from '../../../../components/ThemeImage.astro';
 
@@ -20,16 +21,16 @@ Distr handles the entire deployment lifecycle in the customer's cloud account th
 />
 
 <Steps>
-1. **Set Up Your [Registry](/docs/guides/how-to-registry/)**
-2. **Onboard Your [Application](/docs/guides/onboarding-a-helm-app/)**
-3. **White-label the [Customer portal](/docs/product/branding/)**
-5. **Onboard your first [customer](/docs/guides/onboarding-a-new-customer/)**
-6. **Access the customer's target environment**
-7. **Manage deployments and updates of your app directly for the customer using the [Distr agents](/docs/product/agents/)**
+  1. **Set Up Your [Registry](/docs/guides/how-to-registry/)** 2. **Onboard Your
+  [Application](/docs/guides/onboarding-a-helm-app/)** 3. **White-label the
+  [Customer portal](/docs/product/branding/)** 5. **Onboard your first
+  [customer](/docs/guides/onboarding-a-new-customer/)** 6. **Access the
+  customer's target environment** 7. **Manage deployments and updates of your
+  app directly for the customer using the [Distr
+  agents](/docs/product/agents/)**
 </Steps>
 
 <Aside type="tip">
   BYOC offers SaaS-like operational simplicity with the compliance benefits of
   customer resource ownership.
 </Aside>
-
