chore: fix cloud signup url
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/src/content/docs/docs/getting-started/about.mdx
+++ b/src/content/docs/docs/getting-started/about.mdx
@@ -57,5 +57,5 @@ Get started with Distr in minutes. Follow the [quickstart guide](/docs/getting-s
 
 <Aside type="note">
   Ready to begin? Create your Distr account
-  [here](https://glasskube.cloud/signup.html) and follow the onboarding steps.
+  [here](https://signup.distr.sh/) and follow the onboarding steps.
 </Aside>
